# Architecture

./: .gitignore  README.md
reconstruction/bss/: cis.json  execution_scenarios.md  mappingrules.json  model.dot
reconstruction/sarex-database/default_db/: drs.bson  drs.metadata.json  mappingrules.bson  mappingrules.metadata.json  projects.bson  projects.metadata.json
reconstruction/trust-chain-services/: execution_scenarios.md  mappingrules.json  model.dot
reconstruction/trust-data-connectome/: cis.json  execution_scenarios.md  mappingrules.json  model.dot
sarex-toolset/JavaDependenciesReader/: .gitignore  README.md  pom.xml
sarex-toolset/go-dependencies-reader/: go.mod  main.go
sarex-toolset/go-dependencies-reader/lib/: cmd.go  dr.go
sarex-toolset/js-dependencies-reader/: .eslintrc  package-lock.json  package.json  run.sh  tsconfig.json
sarex-toolset/js-dependencies-reader/src/: index.ts
sarex-toolset/mapping-rule-builder/: .eslintrc.cjs  LICENSE  README.md  package-lock.json  package.json
sarex-toolset/mapping-rule-builder/src/lib/: model.ts  store.ts
sarex-toolset/mapping-rule-builder/src/lib/components/: DRItem.svelte  DRListModal.svelte  Error.svelte  IconButton.svelte  (+15 more)
sarex-toolset/mapping-rule-builder/src/routes/: +layout.svelte  +page.svelte
sarex-toolset/sarex/: .gitignore  Cargo.toml  README.md
sarex-toolset/sarex/src/: ci.rs  cmd.rs  config.rs  conn.rs  main.rs
sarex-toolset/sarex/src/model/: drs.rs  mapping_rules.rs  mod.rs  mongo.rs  projects.rs
sarex-toolset/sarex/src/plugin/: dir.rs  go.rs  java.rs  js.rs  mod.rs
(+16 files in other folders)
